fix: 🐛 improve z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -79,7 +79,6 @@ section {
 
   .left-card {
     animation: left-to-main 1s ease-in-out forwards;
-    z-index: 1;
   }
 
   .right-card {
@@ -100,7 +99,6 @@ section {
 
   .right-card {
     animation: right-to-main 1s ease-in-out forwards;
-    z-index: 1;
   }
 
 }
@@ -115,12 +113,15 @@ section {
     height: 80%;
     top: 10%;
     left: -10%;
+    z-index: 0;
   }
+
   100% {
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
+    z-index: 2;
   }
 }
 
@@ -163,12 +164,14 @@ section {
     height: 80%;
     top: 10%;
     right: -10%;
+    z-index: 0;
   }
   100% {
     width: 100%;
     height: 100%;
     top: 0;
     right: 0;
+    z-index: 2;
   }
 }
 
